# DesignPatterns

./: .gitignore  CMakeLists.txt  README.md
Behavioral/Observer/: README.md  observer.cpp  observer.h
Behavioral/Strategy/: E1APStrategy.h  F1APStrategy.h  IStrategy.h  README.md  RequestContext.h  strategy.cpp
Behavioral/TemplateMethod/: README.md  socket.cpp  socket.h
Behavioral/Visitor/: README.md  visitor.h  visitors.cpp
CRTP/: crtp.cpp  crtp.h
Creational/Factory/: README.md  dynamic_type_registry.cpp  dynamic_type_registry.h  factory.cpp  factory.h  virtual_constructor.cpp  virtual_constructor.h
Creational/Prototype/: README.md  polymorhic.cpp  polymorhic.h  prototype.cpp  prototype.h
Creational/Singleton/: README.md
Structural/Adapter/: README.md  adapter_via_callbacks.cpp  callback.h  locking_queue.h  queue.cpp
Structural/Decorator/: README.md  decorator.h  shapes.h  wrapper.cpp
